# DiffEx

./: .Renviron  .Rhistory  .Rprofile  .gitignore  CHANGELOG.md  DiffEx.Rproj  DiffEx.qmd  Dockerfile  README.md  build_docker.sh  environment.yaml  main.py  params.yaml  push_docker.sh  pyproject.toml
.test/: contrasts.tsv  counts_matrix.tsv  samples.tsv
diffex/: .gitignore  DiffEx.qmd  __init__.py  cli.py  core.py  deg.qmd  gsea.qmd  install_R_packages.R  normalize.qmd
diffex/assets/: ERCC92.fa
scripts/: renv_from_qmd.R  sync_version.py
