[project]
name = "diffex"
version = "0.1.0"
description = "Differential expression report generator using edgeR and Quarto"
dependencies = ["typer==0.15.2", "pyyaml"]

[project.scripts]
diffex = "diffex.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"