[project]
name = "diffex"
version = "v0.5.0-dev"
description = "Differential expression report generator using edgeR and Quarto"
dependencies = ["typer==0.16.1", "pyyaml"]

[project.scripts]
diffex = "diffex.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diffex"]

[tool.setuptools.package-data]
"diffex" = ["*.qmd"]
